Array offset with multiple shapes #73625

Closed
opened 2020-02-06 03:28:21 +01:00 by Adam Earle · 14 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: f1aa4d18d4
Worked: (optional)

Short description of error
Seem to be a bug based on the array modifier for other objects.
Tested on the current blender and 82 and 83.
When you move a Grease Pencil shapes around in edit mode on the same layer the offset in space progressively changes.

If you have any problem please feel free to contact me and I will do my best to explain

Here are two examples its hard for me to work out what's going wrong here

EQAuVGZUYAAB6H5.jpg

EQBCRvnU0AIsyj6.jpg

Exact steps for others to reproduce the error

  1. Create a grease pencil and enter draw mode.
  2. Create two materials both with a solid fill and a stroke.
  3. enter front view and Draw square close to its origin exit edit mode.
  4. add an array modifier.
  5. select another color to be your fill for the array modifier.
  6. You will notice that solid fill color doesn't work switch to checkers (this another bug I will file).
  7. Enter edit mode of the grease pencil object and move the square around one screen (the square will either stay the same distance or progressively offset in space further and further from the sourced shape).

You don't need to watch this you video with timestamps in the description that's 6 minutes long (watch in 2x and it's half the time) but you will see what is trying to be achieved here.

this link will show you the offset problem https:*youtu.be/Ha7SYDI1Hlc?t=51 it will take you 10 second to watch

Attached is a blend. file
More obvious offset.blend
Working_with_weird_offset.blend
system-info.txt

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: `f1aa4d18d4` Worked: (optional) **Short description of error** Seem to be a bug based on the array modifier for other objects. Tested on the current blender and 82 and 83. When you move a Grease Pencil shapes around in edit mode on the same layer the offset in space progressively changes. If you have any problem please feel free to contact me and I will do my best to explain Here are two examples its hard for me to work out what's going wrong here ![EQAuVGZUYAAB6H5.jpg](https://archive.blender.org/developer/F8324700/EQAuVGZUYAAB6H5.jpg) ![EQBCRvnU0AIsyj6.jpg](https://archive.blender.org/developer/F8324703/EQBCRvnU0AIsyj6.jpg) **Exact steps for others to reproduce the error** 1. Create a grease pencil and enter draw mode. 2. Create two materials both with a solid fill and a stroke. 3. enter front view and Draw square close to its origin exit edit mode. 4. add an array modifier. 5. select another color to be your fill for the array modifier. 6. You will notice that solid fill color doesn't work switch to checkers (this another bug I will file). 7. Enter edit mode of the grease pencil object and move the square around one screen (the square will either stay the same distance or progressively offset in space further and further from the sourced shape). You don't need to watch this you video with timestamps in the description that's 6 minutes long (watch in 2x and it's half the time) but you will see what is trying to be achieved here. this link will show you the offset problem [https:*youtu.be/Ha7SYDI1Hlc?t=51 ](https:*youtu.be/Ha7SYDI1Hlc?t=51) it will take you 10 second to watch Attached is a blend. file [More obvious offset.blend](https://archive.blender.org/developer/F8324735/More_obvious_offset.blend) [Working_with_weird_offset.blend](https://archive.blender.org/developer/F8324709/Working_with_weird_offset.blend) [system-info.txt](https://archive.blender.org/developer/F8324708/system-info.txt)
Author

Added subscriber: @AdamEarle

Added subscriber: @AdamEarle
Author

Just an update on this. I tested this out on v2.80.75 and it seems to be working. I hope this can help.

Working Maybe.blend
system-info.txt

Just an update on this. I tested this out on v2.80.75 and it seems to be working. I hope this can help. [Working Maybe.blend](https://archive.blender.org/developer/F8325165/Working_Maybe.blend) [system-info.txt](https://archive.blender.org/developer/F8325160/system-info.txt)

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Array modifier will work relative to object origin, so with scale factor, points further from origin will produce greater offset.

Is this workflow based on any tutorial or manual that would suggest that this shouldn't be the case?

Perhaps you could use multiple strokes modifier for this?https://docs.blender.org/manual/en/dev/grease_pencil/modifiers/generate/multiple_strokes.html

Array modifier will work relative to object origin, so with scale factor, points further from origin will produce greater offset. Is this workflow based on any tutorial or manual that would suggest that this shouldn't be the case? Perhaps you could use multiple strokes modifier for this?https://docs.blender.org/manual/en/dev/grease_pencil/modifiers/generate/multiple_strokes.html
Author

Is it ok to say I think you might be incorrect?

It works in 2.8 as it should. Also when you take a look at an array on a 3D model not grease pencil object you don't get this behavior either. On top of all of that adding the simplify modifier makes the array modifier perform correctly?

Maybe take another look at this discord channel to get a better idea https://discord.gg/fNCXBe

Also here is a test from 2.8 Stroke_setup.blend

Thanks, Ad

Is it ok to say I think you might be incorrect? It works in 2.8 as it should. Also when you take a look at an array on a 3D model not grease pencil object you don't get this behavior either. On top of all of that adding the simplify modifier makes the array modifier perform correctly? Maybe take another look at this discord channel to get a better idea https://discord.gg/fNCXBe Also here is a test from 2.8 [Stroke_setup.blend](https://archive.blender.org/developer/F8326590/Stroke_setup.blend) Thanks, Ad

Added subscriber: @antoniov

Added subscriber: @antoniov

@AdamEarle I have opened the file in version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
As soon as I toggle edit / object mode, outline goes off-center

@antoniov Can you tell if array modifier can be used to create consistent stroke outline, if stroke is not placed at origin?

@AdamEarle I have opened the file in version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` As soon as I toggle edit / object mode, outline goes off-center @antoniov Can you tell if array modifier can be used to create consistent stroke outline, if stroke is not placed at origin?
Author

The stroke fill is a tileable texture.
That texture is driven by the position of the bone. This way it looks like it's driven on every frame.
The Appearance of the stroke is controlled by the scale of the array.
The Translation values should be left at 0.
This is what gives the appearance of the stroke.
The illusion of a stroke this way offers a very controllable stroke thickness.

Edit mode: When you enter edit mode make sure the "Display edit mode in stroke is checked.
Screenshot_1.png

If you have any other questions please just ask.

Ad

The stroke fill is a tileable texture. That texture is driven by the position of the bone. This way it looks like it's driven on every frame. The Appearance of the stroke is controlled by the scale of the array. The Translation values should be left at 0. This is what gives the appearance of the stroke. The illusion of a stroke this way offers a very controllable stroke thickness. Edit mode: When you enter edit mode make sure the "Display edit mode in stroke is checked. ![Screenshot_1.png](https://archive.blender.org/developer/F8326785/Screenshot_1.png) If you have any other questions please just ask. Ad

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Antonio Vazquez self-assigned this 2020-02-07 09:09:53 +01:00

The problem is related to Scale of the array.

The problem is related to Scale of the array.

This issue was referenced by 677e027f20

This issue was referenced by 677e027f2069dac18891db931c860542cbcb4bbe

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

You need minions and a huge bloody award.

We have Suzan awards, but I think there should Developers awards. Perhaps BCON 3?

But seriously freakn well done again to ya. Ad

You need minions and a huge bloody award. We have Suzan awards, but I think there should Developers awards. Perhaps BCON 3? But seriously freakn well done again to ya. Ad
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73625
No description provided.